public/admin-themes/buynoir-admin/assets/admin/assets/css/custom.css
.buynoir-navbar .toggle-sidebar {
	display: inline-block;
	line-height: 1;
	vertical-align: middle;
	padding: 22px 18px;
	cursor: pointer;
}

.navbar-left ul.menubar li.menu-item a {
	display: block;
}

.navbar-left {
	z-index: 9;
}

.admin-dropdown-toggle {
	display: flex;
	justify-content: flex-end;
	align-items: center;
	height: 100%;
}

.admin-dropdown-toggler {
	font-size: 16px;
	padding: 20px;
	line-height: 1;
	cursor: pointer;
	opacity: 0.75;
}

.admin-dropdown-toggle.active .admin-dropdown-toggler {
	opacity: 1;
}

.navbar-top {
	z-index: 100;
}

.search-filter .control {
	width: calc(100% - 36px);
}

.content-container .content {
	margin-top: 0;
}

table.table {
	border: 1px solid #eee;
}

table.table th {
	background: #eee !important;
}

table.table thead tr {
	height: auto !important;
}

.pagination .page-item {
	margin-bottom: 5px;
}

.table table tbody td.actions .action {
	gap: 10px;
}

.content-container .content-wrapper {
	padding: 25px;
}

.table .grid-container {
	overflow-x: scroll;
}

.page-header {
	border-bottom: 1px solid hsla(0, 0%, 63.5%, 0.2);
}

.content-container .content .page-header {
	display: flex;
	flex-wrap: wrap;
	gap: 15px;
	align-items: center;
	justify-content: space-between;
}

.content-container .content .page-header .page-title,
.content-container .content .page-header .page-action {
	float: none;
}

.export-import .export-icon,
.export-import .import-icon {
	top: 3px;
}
.export-import .export-icon + span,
.export-import .import-icon + span {
	top: -8px;
	position: relative;
}

.content-container .content .page-header .page-action .btn {
	vertical-align: bottom;
}

.datagrid-filters {
	gap: 15px;
	flex-wrap: wrap;
	display: flex;
}

.alert-wrapper {
	z-index: 200;
}

